fix overflowing leaf on slugs

--- a/src/pages/dishPage/DishPage.module.scss
+++ b/src/pages/dishPage/DishPage.module.scss
@@ -70,10 +70,12 @@
     }
   }
 }
+
 .ingredients {
   position: relative;
   background: #f5f5f5;
   padding: 20px 20px 120px 20px;
+  overflow: hidden;
 
   h2 {
     position: absolute;
